/*
 * $Id: ChangeLog,v 1.3992 2005/04/01 06:09:04 guerra000 Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2005-04-01 18:15 UTC+0100 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/make_rpm.sh
    ! fixed small typo: should be x11 instead of X11

  * xharbour/source/rdd/dbfntx/dbfntx1.c
    ! fixed reporting informations about orders when out of scope
      order given

2005-04-01 00:06 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
  * source/rtl/tbrowse.prg
    ! Fixed cell repaint when ::ColorRect() is used.

2005-03-31 19:57 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
  * source/rtl/teditor.prg
    ! Fixed cursor position when it changes but no refresh needed.

2005-03-31 17:17 UTC-0300 Eduardo Fernandes <modalsist@yahoo.com.br>
  * xharbour/utils/hbmake.prg
    * Changed to version 1.143.
  * xharbour/utils/pickarry.prg
    ! Fixed a bug that was duplicating lines after select one prg in list
      with fews prgs.

2005-04-01 02:45 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  + source/compiler/xharbour.prg
    * PRG level compiler program using xharbour.dll

  * source/compiler/harbour.c
    * minor changes to make it possible to create compiler functionalities
      in DLL format

  * make_w32.bat
  * makefile.wc
  * dll_w32.bat
  * hrbdll.wc

  * make_b32.bat
  * makefile.bc
  * dll_b32.bat
  * hrbdll.bc

  * make_gc.bat
  * makefile.gc
  * dll_gc.bat
  * hrbdll.gc

  * make_dc.bat
  * makefile.dc
  * dll_dc.bat
  * hrbdll.dc

  * make_pc.bat
  * makefile.pc
  * dll_pc.bat
  * hrbdll.pc

  * dll_vc.bat
  * hrbdll.vc
    + creation of xharbour.dll, xHarbour compiler in DLL format
    + creation of xharbour.exe, PRG level xHarbour compiler
    + creation of xharbourdll.exe, PRG level xHarbour compiler

2005-03-31 12:31 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
  * ./hrbdll.bc